# wwplot

./: .eslintrc.json  .gitignore  .prettierrc  .pylintrc  CHANGELOG.md  PKGBUILD_AUR  README  README.md  WWplot.desktop  about.glade  config.json  export_table.py  fit.py  gen_win_exe.bat  go.mod  go.sum  headerbar.glade  import_table.py  index.html  main.go  main.py  menu.glade  meson.build  meson_post_install.py  params.json  plot.py  ui.glade  wwplot.code-workspace  wwplot.in
.github/workflows/: CI.yaml
WWplot/: application.py  application_window.py  export_table.py  fit.py  import_table.py  main.py  model.py  plot.py  table.py  table_model.py
WWplot/qml/: application_window.qml
WWplot/ui/: about.glade  application_window.ui  custom.css  fit_parameter.glade  listbox.css  main_ui.glade  table.ui  table_ui.glade
data/: com.github.wwmm.wwplot.desktop.in  meson.build
examples/: accelerated_motion.py  accelerated_motion.tsv  damped_motion.py  damped_motion.tsv  free_motion.py  free_motion.tsv  gaussian.py  gaussian.tsv  gaussian_distribution.tsv  linear_fit.csv  lognormal.py  lognormal_distribution.tsv  nonlinear_fit.tsv  uniform_motion.py  uniform_motion.tsv
po/: POTFILES.in  pt_BR.po  wwplot.pot
server/: config.go  server.go
static/: index.html
static/css/: common.css  index.css  materialdesignicons.css
static/js/: main.js
static/js/common/: chart.js  util.js
ui/: main_ui.glade
